--- a/README
+++ b/README
@@ -3,3 +3,7 @@ Remotely control a Rock's Bar-B-Que Stoker
 http://www.rocksbarbque.com/
 
 This is nowhere near complete.  I've only just begun...
+
+Tony Buser <tbuser@gmail.com>
+Copyright (c) 2008, http://unconundrum.com
+
